===] January 5, 2017 [======================================================

1. Removed superfluous RUN_IN_CYCLE for $MODEs that are not ‘episodes’
   in import_session_data(). Let it be set by respective keys (-c/-r/-R).
2. Improved check for the last item with -1 used in place of VIDEOFILES_COUNT 
   and EXIT_AFTER_THIS_EPISODE if they are empty/unset.
3. SCREENSHOT_DIR doesn’t go to the journal, if it was set to dot.
   Its original value is used instead.
4. Decided to stay with British English.

===] August 29, 2015 [======================================================

1. Fix 11.

===] August 19, 2015 [======================================================

1. Fix #10.
2. Dropping support fro debean and fedora, open an issue if you need it.
3. Changes to manpage regarding changes in figlet.

===] July 14, 2015 [========================================================

1. Fix #9.

===] July 13, 2015 [========================================================

1. Fix #7, #8.
2. Add resulting mpv command and pstree to debug output.

===] July 8, 2015 [=========================================================

1. Fix #6.
2. Corrections to the documentation.

===] March 7, 2015 [========================================================

1. Extra fixes to the documentation.
2. Removal of -j|--list-journal, since it was meant as a crutch to com-
   pensate the lack of now present completion for -r and -R.

===] March 6, 2015 [========================================================

(\ /)
(^.^) Bunny forsees a bright future for these changes.
(> <)

Good news to read (you’d better read):

1. Introducing… bash completion! Now you don’t have to remember
   what exactly you typed as a KEYWORD.
2. New key: --last-item-mark. Contains a string to print after episode
   number when watching cycle is over. Seeing it may help to not look
   stupid staring at the screen while there’s a pause caused by the
   GNU parallel.

The rest of what has been done:
