@@ -1,4 +1,4 @@
-.TH watch.sh 1 "January 5, 2017" Linux "User Manuals"
+.TH watch.sh 1 "March 1, 2017" Linux "User Manuals"
 .\"
 .\" NAME ----------------------------------------------------------------------
 .\"
